--- a/MATH504 - Numerical Methods/Homework Response/BICK-hw10.ipynb
+++ b/MATH504 - Numerical Methods/Homework Response/BICK-hw10.ipynb
@@ -256,7 +256,7 @@
    "source": [
     "# plot the sinusoid curve given the fitted parameters\n",
     "def plot_curve(y,A, omega, phi):\n",
-    "    plt.plot(t, A*np.cos(omega*t + phi))\n",
+    "    plt.plot(t, A*np.sin(omega*t + phi))\n",
     "    plt.plot(t, y, 'ro')\n",
     "    plt.xlabel('t')\n",
     "    plt.ylabel('y')\n",
