--- a/MATH504 - Numerical Methods/Homework Response/BICK-hw10.ipynb
+++ b/MATH504 - Numerical Methods/Homework Response/BICK-hw10.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "3. For $i = 2, 3, \\dots, n$:\n",
     "\n",
-    "    a. Let $u_i = v_i - \\sum_{j=1}^{i-1} \\frac{u_j \\cdot v_i}{u_j \\cdot u_j} u_j$.\n",
+    "    a. Let $u_i = v_i - \\sum_{j=1}^{i-1} (u_j \\cdot v_i) u_j$.\n",
     "\n",
     "    b. Normalize $u_i$ by dividing by its length.\n",
     "\n",
@@ -138,21 +138,38 @@
    "source": [
     "We start with the vector $x_1$.\n",
     "\n",
-    "$u_1 = x_1 = \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix}$\n",
+    "$u_1 = x_1 = \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Next, we subtract the projection of $x_2$ onto $u_1$ from $x_2$.\n",
     "\n",
-    "$u_2 = x_2 - \\frac{u_1 \\cdot x_2}{u_1 \\cdot u_1} u_1 = \\begin{pmatrix}2\\\\2\\\\0\\\\-3\\end{pmatrix} - \\frac{1}{2} \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix} = \\begin{pmatrix}1\\\\1\\\\0\\\\-3\\end{pmatrix}$\n",
-    "\n",
+    "$u_2 = x_2 - (u_1 \\cdot x_2) u_1 = \\begin{pmatrix}2\\\\2\\\\0\\\\-3\\end{pmatrix} - 4 \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix} = \\begin{pmatrix}-2\\\\-2\\\\0\\\\-3\\end{pmatrix}$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next, we subtract the projection of $x_3$ onto $u_1$ and $u_2$ from $x_3$.\n",
     "\n",
-    "$u_3 = x_3 - \\frac{u_1 \\cdot x_3}{u_1 \\cdot u_1} u_1 - \\frac{u_2 \\cdot x_3}{u_2 \\cdot u_2} u_2 = \\begin{pmatrix}0\\\\-1\\\\1\\\\0\\end{pmatrix} - \\frac{1}{2} \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix} - \\frac{1}{2} \\begin{pmatrix}1\\\\1\\\\0\\\\-3\\end{pmatrix} = \\begin{pmatrix}0\\\\-1\\\\1\\\\3\\end{pmatrix}$\n",
-    "\n",
+    "$u_3 = x_3 - (u_1 \\cdot x_3) u_1 - (u_2 \\cdot x_3) u_2 = \\begin{pmatrix}0\\\\-1\\\\1\\\\0\\end{pmatrix} - (-1) \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix} - 2 \\begin{pmatrix}-2\\\\-2\\\\0\\\\-3\\end{pmatrix} = \\begin{pmatrix}5\\\\4\\\\1\\\\6\\end{pmatrix}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, we normalize each vector.\n",
     "\n",
     "$u_1 = \\frac{1}{\\sqrt{2}} \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix}$\n",
-    "$u_2 = \\frac{1}{\\sqrt{6}} \\begin{pmatrix}1\\\\1\\\\0\\\\-3\\end{pmatrix}$\n",
-    "$u_3 = \\frac{1}{\\sqrt{10}} \\begin{pmatrix}0\\\\-1\\\\1\\\\3\\end{pmatrix}$\n",
+    "$u_2 = \\frac{1}{\\sqrt{13}} \\begin{pmatrix}-2\\\\-2\\\\0\\\\-3\\end{pmatrix}$\n",
+    "$u_3 = \\frac{1}{\\sqrt{78}} \\begin{pmatrix}5\\\\4\\\\1\\\\6\\end{pmatrix}$\n",
     "\n",
     "The vectors $\\{u_1, u_2, u_3\\}$ are an orthonormal basis for the subspace spanned by $\\{x_1, x_2, x_3\\}$."
    ]
