--- a/MATH504 - Numerical Methods/Homework Response/BICK-hw10.ipynb
+++ b/MATH504 - Numerical Methods/Homework Response/BICK-hw10.ipynb
@@ -40,15 +40,37 @@
     "\n",
     "$x_{n+1} = x_n - F(x_n)^{-1}g_n$, where $F(x_n)$ is the Hessian matrix of $f(x,y)$, and $g_n$ is the gradient vector of $f(x,y)$.\n",
     "\n",
-    "To do each iteration, we need to compute the Hessian matrix and the gradient vector. Then we use these two to compute the next point in each iteration using the formula:\n",
+    "To do each iteration, we need to compute the Hessian matrix and the gradient vector.\n",
+    "\n",
+    "The Hessian matrix is:\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "\\frac{\\partial^2 f}{\\partial x_1^2} & \\frac{\\partial^2 f}{\\partial x_1 \\partial x_2} \\\\\n",
+    "\\frac{\\partial^2 f}{\\partial x_2 \\partial x_1} & \\frac{\\partial^2 f}{\\partial x_2^2}\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "-400x_2-1200x_1^2+2 & -400x_1 \\\\\n",
+    "-400x_1 & 200\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "The gradient vector is:\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "\\frac{\\partial f}{\\partial x_1} \\\\\n",
+    "\\frac{\\partial f}{\\partial x_2}\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "-2(1-x_1) - 400(x_2-x_1^2)x_1 \\\\\n",
+    "200(x_2-x_1^2)\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Then we use these two to compute the next point in each iteration using the formula:\n",
     "\n",
     "$x_{n+1} = x_n - \\begin{pmatrix}\n",
-    "2(1-x_1) & -400x_1 \\\\\n",
+    "-400x_2-1200x_1^2+2 & -400x_1 \\\\\n",
     "-400x_1 & 200\n",
     "\\end{pmatrix}^{-1}\n",
     "\\begin{pmatrix}\n",
-    "-2(1-x_1) \\\\\n",
-    "-200(x_2-x_1^2)\n",
+    "-2(1-x_1) - 400(x_2-x_1^2)x_1 \\\\\n",
+    "200(x_2-x_1^2)\n",
     "\\end{pmatrix}$ evaluated at the point $x_n$.\n",
     "\n",
     "\n"
@@ -86,16 +108,66 @@
     "1 \\\\\n",
     "0\n",
     "\\end{pmatrix} - \\begin{pmatrix}\n",
-    "0 & -400 \\\\\n",
+    "-1200 & -400 \\\\\n",
     "-400 & 200\n",
     "\\end{pmatrix}^{-1}\n",
     "\\begin{pmatrix}\n",
-    "0 \\\\\n",
-    "200\n",
-    "\\end{pmatrix} = \\begin{pmatrix}\n",
-    "3/2 \\\\\n",
-    "0\n",
+    "400 \\\\\n",
+    "-200\n",
+    "\\end{pmatrix}$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$=\\begin{pmatrix}\n",
+    "1 \\\\\n",
+    "0 \\end{pmatrix} - \\frac{1}{-1200*200-(-400)*(-400)}\\begin{pmatrix}\n",
+    "200 & 400 \\\\\n",
+    "400 & -1200\n",
+    "\\end{pmatrix} \\begin{pmatrix}\n",
+    "400 \\\\\n",
+    "-200\n",
     "\\end{pmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$=\\begin{pmatrix}\n",
+    "1 \\\\\n",
+    "0 \\end{pmatrix} - \\frac{1}{-400000}\\begin{pmatrix}\n",
+    "200 & 400 \\\\\n",
+    "400 & -1200\n",
+    "\\end{pmatrix} \\begin{pmatrix}\n",
+    "400 \\\\\n",
+    "-200\n",
+    "\\end{pmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$=\\begin{pmatrix}\n",
+    "1 \\\\\n",
+    "0 \\end{pmatrix} + \\begin{pmatrix} \n",
+    "-1/2000 & -1/1000 \\\\\n",
+    "-1/1000 & 3/1000 \\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "400 \\\\\n",
+    "-200 \\end{pmatrix}\n",
+    "= \\begin{pmatrix}\n",
+    "1 \\\\\n",
+    "0 \\end{pmatrix} +\n",
+    "\\begin{pmatrix}\n",
+    "0 \\\\\n",
+    "1 \\end{pmatrix} =\n",
+    "\\begin{pmatrix}\n",
+    "1 \\\\\n",
+    "1 \\end{pmatrix}$"
    ]
   },
   {
@@ -106,7 +178,7 @@
     "\n",
     "Let $S=$ span ${x_1, x_2, x_3}$, where\n",
     "\n",
-    "$x_1 = \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix}$,\n",
+    "$x_1 = \\begin{pmatrix}2\\\\1\\\\0\\\\0\\end{pmatrix}$,\n",
     "$x_2 = \\begin{pmatrix}2\\\\2\\\\0\\\\-3\\end{pmatrix}$,\n",
     "$x_3 = \\begin{pmatrix}0\\\\-1\\\\1\\\\0\\end{pmatrix}$\n",
     "\n",
@@ -138,7 +210,7 @@
    "source": [
     "We start with the vector $x_1$.\n",
     "\n",
-    "$u_1 = x_1 = \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix}$\n"
+    "$u_1 = x_1 = \\begin{pmatrix}2\\\\1\\\\0\\\\0\\end{pmatrix}$\n"
    ]
   },
   {
@@ -148,7 +220,7 @@
     "\n",
     "Next, we subtract the projection of $x_2$ onto $u_1$ from $x_2$.\n",
     "\n",
-    "$u_2 = x_2 - (u_1 \\cdot x_2) u_1 = \\begin{pmatrix}2\\\\2\\\\0\\\\-3\\end{pmatrix} - 4 \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix} = \\begin{pmatrix}-2\\\\-2\\\\0\\\\-3\\end{pmatrix}$\n",
+    "$u_2 = x_2 - \\frac{(u_1 \\cdot x_2)}{||u_1||} u_1 = \\begin{pmatrix}2\\\\2\\\\0\\\\-3\\end{pmatrix} - \\frac{6}{5} \\begin{pmatrix}2\\\\1\\\\0\\\\0\\end{pmatrix} = \\begin{pmatrix}-2/5\\\\-4/5\\\\0\\\\-3\\end{pmatrix}$\n",
     "\n"
    ]
   },
@@ -158,7 +230,12 @@
    "source": [
     "Next, we subtract the projection of $x_3$ onto $u_1$ and $u_2$ from $x_3$.\n",
     "\n",
-    "$u_3 = x_3 - (u_1 \\cdot x_3) u_1 - (u_2 \\cdot x_3) u_2 = \\begin{pmatrix}0\\\\-1\\\\1\\\\0\\end{pmatrix} - (-1) \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix} - 2 \\begin{pmatrix}-2\\\\-2\\\\0\\\\-3\\end{pmatrix} = \\begin{pmatrix}5\\\\4\\\\1\\\\6\\end{pmatrix}$\n"
+    "$u_3 = x_3 - (u_1 \\cdot x_3) u_1 - (u_2 \\cdot x_3) u_2 = \\begin{pmatrix}0\\\\-1\\\\1\\\\0\\end{pmatrix} - \\frac{-1}{\\sqrt{5}} \\begin{pmatrix}2\\\\1\\\\0\\\\0\\end{pmatrix} - \\frac{4\\sqrt{5}}{7} \\begin{pmatrix}-2/5\\\\-4/5\\\\0\\\\-3\\end{pmatrix} = \\begin{pmatrix}\n",
+    "18/49 \\\\\n",
+    "-36/49 \\\\\n",
+    "1 \\\\\n",
+    "-12/49\n",
+    "\\end{pmatrix}$\n"
    ]
   },
   {
@@ -167,9 +244,9 @@
    "source": [
     "Finally, we normalize each vector.\n",
     "\n",
-    "$u_1 = \\frac{1}{\\sqrt{2}} \\begin{pmatrix}1\\\\1\\\\0\\\\0\\end{pmatrix}$\n",
-    "$u_2 = \\frac{1}{\\sqrt{13}} \\begin{pmatrix}-2\\\\-2\\\\0\\\\-3\\end{pmatrix}$\n",
-    "$u_3 = \\frac{1}{\\sqrt{78}} \\begin{pmatrix}5\\\\4\\\\1\\\\6\\end{pmatrix}$\n",
+    "$u_1 = \\begin{pmatrix}\\frac{2\\sqrt{5}}{5}\\\\\\frac{\\sqrt{5}}{5}\\\\0\\\\0\\end{pmatrix}$\n",
+    "$u_2 = \\begin{pmatrix}-\\frac{2\\sqrt{5}}{35}\\\\\\frac{4\\sqrt{5}}{35}\\\\0\\\\-\\frac{3\\sqrt{5}}{7}\\end{pmatrix}$\n",
+    "$u_3 = \\begin{pmatrix}\\frac{18\\sqrt{85}}{595}\\\\-\\frac{36\\sqrt{85}}{595}\\\\\\frac{7\\sqrt{85}}{85}\\\\-\\frac{12\\sqrt{85}}{595}\\end{pmatrix}$\n",
     "\n",
     "The vectors $\\{u_1, u_2, u_3\\}$ are an orthonormal basis for the subspace spanned by $\\{x_1, x_2, x_3\\}$."
    ]
@@ -256,12 +333,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now implement the Gauss-Newton method. We start with an initial guess of $A = 2$, $\\omega = 1$, and $\\phi = 0$. We then calculate the Jacobian matrix and the residual vector using these values and the data.\n"
+    "We now implement the Gauss-Newton method. We start with an initial guess of $A = 1$, $\\omega = 1$, and $\\phi = 1$. We then calculate the Jacobian matrix and the residual vector using these values and the data.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,8 +374,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After defining the Gauss newton method above, we call the function and get our estimate of the parameters $A$, $\\omega$, and $\\phi$ below. The value are close to the true values of $A = 2.01$, $\\omega = 0.992$, and $\\phi = 0.541$ given in the lecture notes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,6 +410,13 @@
     "    plt.xlabel('t')\n",
     "    plt.ylabel('y')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now plot the data and the sinusoid with the estimated parameters. The plot is shown below. We see that the sinusoid fits the data well."
    ]
   },
   {
