finished hw11 and backup work

--- a/MATH504 - Numerical Methods/Homework Response/BICK-hw11.ipynb
+++ b/MATH504 - Numerical Methods/Homework Response/BICK-hw11.ipynb
@@ -328,6 +328,34 @@
     "4.4486*\\frac{(x+1)(x+0.5)(x)(x-1)}{(0.5+1)(0+0.5)(0.5)(0.5-1)} + \n",
     "20.085*\\frac{(x+1)(x+0.5)(x-0)(x-0.5)}{(1+1)(1+0.5)(1-0)(0-0.5)}$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This gives us the following polynomial:\n",
+    "\n",
+    "$p_4(x) = 0.0497*(1.5 x^4 - 1.5 x^3 - 0.375 x^2 + 0.375 x) + 0.223*(-10.875 x^4 + 5.4375 x^3 + 10.875 x^2 - 5.4375 x) + 0.25*(x^4 - 0.3125 x^2 + 0.0625) + 4.4486*(-0.1875 x^4 - 0.09375 x^3 + 0.1875 x^2 + 0.09375 x) + 20.085*(-1.5 x^4 - 1.5 x^3 + 0.375 x^2 + 0.375 x)$\n",
+    "\n",
+    "Then the error is given by:\n",
+    "\n",
+    "$f(x) - p_4(x) = e^{3x} - p_4(x)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The error of interpolation, as discussed in the lecture, is given by:\n",
+    "\n",
+    "$e_n(x)=f(x)-p_n(x) = \\frac{f^{(n+1)}(\\zeta)}{(n+1)!}\\prod_{i=0}^n(x-x_i)$\n",
+    "\n",
+    "The specific value of $\\zeta$ depends on x and is not available explicitly, so this can be bounded, if the derivative of f is bounded. In the case of our functino $f(x) = e^{3x}$, the derivative is $|f^{(n)}(x)| \\leq 3^ne^{3x}$, so we can try to use this to bound the error:\n",
+    "\n",
+    "$|e_n(x)| \\leq \\frac{3^{n+1}e^{3x}}{(n+1)!}\\prod_{i=0}^n|x-x_i|$\n",
+    "\n",
+    "However, the limit of this derivative is not bounded, so we cannot use this to bound the error. Within an interval, we could bound this by the max value of the function on the interval, but can do no better. "
+   ]
   }
  ],
  "metadata": {
